
On Windows, only building with the UCRT runtime is supported.

DEFAULTS

• |]d-default| and |[d-default| accept a count.
• |[D-default| and |]D-default| jump to the first and last diagnostic in the
  current buffer, respectively.
• 'number', 'relativenumber', 'signcolumn', and 'foldcolumn' are disabled in
  |terminal| buffers. See |terminal-config| for an example of changing these defaults.

DIAGNOSTICS

• |vim.diagnostic.config()| accepts a "jump" table to specify defaults for
  |vim.diagnostic.jump()|.
• The "underline" diagnostics handler sorts diagnostics by severity when using
  the "severity_sort" option.

EDITOR

• The order in which signs are placed was changed. Higher priority signs will
  now appear left of lower priority signs.
• |hl-CurSearch| now behaves the same as Vim and no longer updates on every
  cursor movement.
• Moving in the buffer list using |:bnext| and similar commands behaves as
  documented and skips help buffers if run from a non-help buffer, otherwise
  it moves to another help buffer.
• Bells from a |terminal| buffer are now silent by default, unless 'belloff'
  option doesn't contain "term" or "all".

EVENTS

• |vim.ui_attach()| callbacks for |ui-messages| `msg_show` events are executed in
  |api-fast| context.

LSP

• Improved rendering of LSP hover docs. |K-lsp-default|
• |vim.lsp.completion.enable()| gained the `convert` callback which enables
  customizing the transformation of an LSP CompletionItem to |complete-items|.
• |vim.lsp.diagnostic.from()| can be used to convert a list of
  |vim.Diagnostic| objects into their LSP diagnostic representation.
• |vim.lsp.buf.references()|, |vim.lsp.buf.declaration()|, |vim.lsp.buf.definition()|,
  |vim.lsp.buf.type_definition()|, |vim.lsp.buf.implementation()| and
  |vim.lsp.buf.hover()| now support merging the results of multiple clients
  but no longer trigger the global handlers from `vim.lsp.handlers`
• |vim.lsp.buf.typehierarchy()| now passes the correct params for each